hphp/hack/test/typecheck/reified_generics/valid_targ_fun.php
<?hh // partial

class C<reify T> {}

type Ty = C<(function (): string)>;
